# chip8-webgpu

./: Cargo.toml  LICENSE
disassembled/: ibm_logo.txt
src/: chip8.rs  lib.rs  main.rs
src/chip8/: basic_types.rs
src/chip8/decoder/: bit_manipulation.rs  decode.rs  mod.rs
src/chip8/disassembler/: disassemble.rs
src/chip8/instructions/: base_instruction.rs  instruction_list.rs  mod.rs
src/chip8/instructions/instruction_list/: add_number_register.rs  and_register.rs  clear_screen.rs  copy_register.rs  draw_sprite.rs  jump.rs  not_opcode.rs  or_register.rs  register_add_number.rs  set_address_register.rs  set_register.rs  xor_register.rs
src/chip8/machine_state/: configuration.rs  machine_state.rs  memory.rs  mod.rs  program_counter.rs  registers.rs  screen.rs  state.rs  timers.rs
src/utilities/: execution_timer.rs  storage.rs
tests/instructions/: and_register_test.rs  copy_register_test.rs  instruction_common.rs  mod.rs  operators_register_test.rs  or_register_test.rs  set_register_test.rs
