[package]
name = "chip8-webgpu"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
inquire = "0.6.2"
macroquad = "0.4.4"


[lints.rust]
unsafe_code = "forbid"

#[lints.clippy]
#cargo = "deny"


#enum_glob_use = "deny"
#pedantic = "deny"
#nursery = "deny"
#unwrap_used = "deny"